--- a/pom.xml
+++ b/pom.xml
@@ -39,14 +39,16 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <descriptorRefs>
-                         <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
+                    <!--<descriptorRefs>-->
+                         <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
+                    <!--</descriptorRefs>-->
+                    <descriptor>package-full.xml</descriptor>
                     <archive>
                         <manifest>
                             <mainClass>MainReader</mainClass>
                         </manifest>
                     </archive>
+                    <finalName>pdm</finalName>
                 </configuration>
                 <executions>
                     <execution>
